# NewTechem_LLM

./: pyproject.toml
NewTechem_LLM/: LLM_API.py  RAG.py  app.py  demo.py  stt.py  style.css  translator.py  tts.py  utils.py
NewTechem_LLM/flask_chatbot/: app.py
NewTechem_LLM/flask_chatbot/static/: script.js  style.css
NewTechem_LLM/flask_chatbot/templates/: index.html
