[tool.poetry]
name = "newtechem-llm"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
scipy = "^1.8.0"
langchain = "^0.2.3"
langchain-community = "^0.2.4"
langchain-core = "^0.2.5"
huggingface-hub = "^0.23.3"
speechrecognition = "^3.10.4"
argostranslate = "^1.9.6"
docx2txt = "^0.8"
requests = "^2.32.3"
gradio = "^4.36.1"
tensorflow-io-gcs-filesystem = "0.31.0"
zhtts = "^0.0.1"
sentence-transformers = "^3.0.1"
faiss-cpu = "^1.8.0"
tts = "^0.22.0"
pyttsx3 = "^2.90"
protobuf = "3.20"
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
